<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="viewModel"
                type="com.beatricefarias.mvvmpractice.viewmodel.TaxCalculationViewModel"
        />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tax_calculations_input_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/activity_main"
            tools:context=".view.MainActivity">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/spending_amount_input_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/spendings_amount_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/spendings_amount_hint"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:inputType="numberDecimal"
                    android:text="@={viewModel.spendingAmount}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tax_percentage_input_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toBottomOf="@+id/spending_amount_input_container">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tax_percentage_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tax_percentage_hint"
                    android:inputType="number"
                    android:text="@={viewModel.taxPercentage}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/spending_amount_input_container"
            />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintTop_toBottomOf="@id/tax_percentage_input_container">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/spendings_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="15.6"
                        android:textAlignment="center"
                        style="@style/TextAppearance.AppCompat.Large"/>

                <TextView
                        android:id="@+id/spendings_amount_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/spendings_amount"
                        android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/tax_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="10"
                        android:textAlignment="center"
                        style="@style/TextAppearance.AppCompat.Large"/>

                <TextView
                        android:id="@+id/tax_amount_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tax_amount"
                        android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/grand_total"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="17.16"
                        android:textAlignment="center"
                        style="@style/TextAppearance.AppCompat.Large"/>

                <TextView
                        android:id="@+id/grand_total_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/grand_total"
                        android:textAlignment="center"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>